add sdict file format and tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,18 @@ cmake_minimum_required(VERSION 3.22)
 
 project(dictionary CXX)
 
-option(USE_ASAN "Use address sanitizer in debug config" TRUE)
+option(USE_ASAN "Use address sanitizer" FALSE)
+option(BUILD_TESTS TRUE)
+
+if (BUILD_TESTS)
+	add_subdirectory(tests)
+endif()
 
 find_package(FLTK 1.4 REQUIRED)
 find_package(OpenSSL REQUIRED)
 
 add_executable(dictionary "src/main.cpp")
+add_executable(save_words "src/save_words.cpp")
 
 if (NOT $<CONFIG:Debug>)
 	set_target_properties(dictionary PROPERTIES WIN32_EXECUTABLE TRUE MACOSX_BUNDLE TRUE)
@@ -23,6 +29,8 @@ endif()
 
 target_compile_features(dictionary PUBLIC cxx_std_23)
 set_target_properties(dictionary PROPERTIES CXX_EXTENSIONS FALSE)
+target_compile_features(save_words PUBLIC cxx_std_23)
+set_target_properties(save_words PROPERTIES CXX_EXTENSIONS FALSE)
 
 if (MSVC)
 	target_compile_options(dictionary PRIVATE /W4)
@@ -37,7 +45,11 @@ target_link_libraries(dictionary PUBLIC fltk::fltk)
 target_include_directories(dictionary PUBLIC ${OPENSSL_INCLUDE_DIR})
 target_link_libraries(dictionary PUBLIC ${OPENSSL_LIBRARIES})
 
+target_include_directories(save_words PUBLIC "include")
+target_include_directories(save_words PUBLIC ${OPENSSL_INCLUDE_DIR})
+target_link_libraries(save_words PUBLIC ${OPENSSL_LIBRARIES})
+
 if (USE_ASAN)
-	target_compile_options(dictionary PRIVATE $<$<CONFIG:Debug>:-fsanitize=address>)
-	target_link_options(dictionary PRIVATE $<$<CONFIG:Debug>:-fsanitize=address>)
+	target_compile_options(dictionary PRIVATE -fsanitize=address)
+	target_link_options(dictionary PRIVATE -fsanitize=address)
 endif()
